<resources>
    <string name="app_name">FirebaseDemo</string>
    <string name="book_oil_change">Book an Oil change</string>
    <string name="contact_info">Contact info</string>
    <string name="name_req">Name:</string>
    <string name="email_req">Email:</string>
    <string name="phone_number_req">Phone:</string>
    <string name="book_an_oil_service">Book an Oil service</string>
    <string name="alert_rate_service">Please rate the service</string>
    <string name="book_reservation">Reservation</string>
    <string name="book_last_minute">Last-Minute</string>
    <string name="book_yes">Yes</string>
    <string name="book_no">No</string>
    <string name="review_booking_info">Review Booking Information</string>
    <string name="vehicle_info">Vehicle information</string>
    <string name="pick_a_saved_vehicle">Pick a saved vehicle</string>
    <string name="vehicle_name">Vehicle name</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="licence_plate">Liscense plate</string>
    <string name="address_for_service">Address for service</string>
    <string name="pick_a_saved_address">Pick a saved address</string>
    <string name="street">Street</string>
    <string name="app">Apt.#</string>
    <string name="service_requested">Service requested</string>
    <string name="_40_for_most_make_and_models"><![CDATA[Oil Change - $40.00 *[$40 for most make and models.  Oil Change subject to increase]]]></string>
    <string name="date_time_of_service">Date-Time of Service</string>
    <string name="reservation">Reservation</string>
    <string name="last_minute">Last-minute</string>
    <string name="disclamer_reservation">Disclaimer reservation</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="hh_mm">hh:mm</string>
    <string name="bookig">booking</string>
    <string name="view_History">View History</string>
    <string name="subject">Subject</string>
    <string name="contact_message">Contact message</string>
    <string name="contact_submit">Submit</string>
    <string name="Phonenumber">Phone number</string>
    <string name="Email">Email</string>
    <string name="name">Name</string>
    <string name="Update">Update</string>
    <string name="Contact_us">Contact us</string>
    <string name="radio_user">User</string>
    <string name="radio_ServiceProvider">Service Provider</string>
    <string name="msg_subscribed">General subscribed category</string>
    <string name="msg_subscribe_failed">Message subscription failed</string>
</resources>
