<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/common_padding"
        android:gravity="center"
        android:text="@string/Contact_us"
        android:textColor="@color/dark_gray"
        android:layout_marginTop="20dp"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_bg_edittext"
        android:hint="@string/subject"
        android:imeOptions="actionNext"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/edtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_bg_edittext"
        android:gravity="top"
        android:imeOptions="actionDone"
        android:padding="10dp"
        android:hint="@string/contact_message"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="5"
        android:textColor="@color/white"
        android:lines="4"
        android:textColorHint="@color/hint_color" />

    <Button
        android:id="@+id/btnSubmit"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_color"
        android:text="@string/contact_submit"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        />
</LinearLayout>