<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_profilepic"
        />
    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_bg_edittext"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_color" />
    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_bg_edittext"
        android:hint="@string/Email"
        android:imeOptions="actionNext"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_color" />
    <EditText
        android:id="@+id/edtPhonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_bg_edittext"
        android:hint="@string/Phonenumber"
        android:imeOptions="actionNext"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_color" />
    <Button
        android:id="@+id/btnUpdate"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_color"
        android:text="@string/Update"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        />

    <TextView
        android:id="@+id/signout_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/login_text"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:text="Sign out"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</LinearLayout>